# WhisperGuiNeo

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: audio.rs  cli.rs  main.rs  progress.rs  transcribe.rs  vad.rs
